# dna-not-ascii

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  doxy.conf
src/: algo_gen.cpp  algo_gen.hpp  amino_acid.cpp  amino_acid.hpp  compressed_reader.cpp  compressed_reader.hpp  dna.cpp  dna_allocator.cpp  dna_allocator.hpp  plot.cpp  plot.hpp  ribosome.cpp  ribosome.hpp  util.cpp  util.hpp
